; ModuleID = '/home/carl/AnghaBench/kphp-kdb/common/extr_server-functions.c_remove_pidfile.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/common/extr_server-functions.c_remove_pidfile.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [35 x i8] c"Could not remove the pid file %s.\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @remove_pidfile(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i8*, i8** %2, align 8
  %4 = icmp eq i8* %3, null
  br i1 %4, label %5, label %6

5:                                                ; preds = %1
  br label %13

6:                                                ; preds = %1
  %7 = load i8*, i8** %2, align 8
  %8 = call i64 @unlink(i8* %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %13

10:                                               ; preds = %6
  %11 = load i8*, i8** %2, align 8
  %12 = call i32 @kprintf(i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0), i8* %11)
  br label %13

13:                                               ; preds = %5, %10, %6
  ret void
}

declare dso_local i64 @unlink(i8*) #1

declare dso_local i32 @kprintf(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
